セクションタイトル下部線追加

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta main="viewport" content="width=device-width, initial-scale=1.0">
     <title>ポートフォリオ</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,25 +27,35 @@
     <div id="top">
         <h2>Portfolio</h2>
     </div>
-    <div id="about" class="section-name">
-        <h2 id="about-txt">About</h2>
+    <div id="about" class="section-main">
+        <div class="section-title">
+            <h2 id="about-txt">About</h2>
+        </div>
         <div class="profile">
             <img src="images/icon.png" alt="profileImage" width="250" height="250">
             <div class="profile-txt">
-                <p >自己紹介<br>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                <div class="prtext">
+                    <p >自己紹介<br>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                </div>
                 <p >名前：ここにテキストを入力<br>所在地：ここにテキストを入力<br>お問い合わせ：sample@example.com</p>
             </div>
         </div>
     </div>
-    <div id="skills" class="section-name">
-        <h2 id="skills-txt">Skills</h2>
+    <div id="skills" class="section-main">
+        <div class="section-title">
+            <h2 id="skills-txt">Skills</h2>
+        </div>
     </div>
     <!--横スクロールで作りたい-->
-    <div id="works" class="section-name">
-        <h2 id="works-txt">Works</h2>
+    <div id="works" class="section-main">
+        <div class="section-title">
+            <h2 id="works-txt">Works</h2>
+        </div>
     </div>
-    <div id="social" class="section-name">
-        <h2 id="social-txt">Social</h2>
+    <div id="social" class="section-main">
+        <div class="section-title">
+            <h2 id="social-txt">Social</h2>
+        </div>
     </div>
     <main>
         <!--文章など-->
