--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta main="viewport" content="width=device-width, initial-scale=1.0">
     <title>ポートフォリオ</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+    </style>
 </head>
 <body>
     <header class="site-header">
@@ -50,6 +53,19 @@
     <div id="works" class="section-main">
         <div class="section-title">
             <h2 id="works-txt">Works</h2>
+        </div>
+        <div class="works-pickup">
+            <!--ピックアップ作品2x2-->
+            <div class="work-card">
+                <img src="images/icon.png" alt="作品名" class="work-img">
+                <a href="https://youtube.com" target="_blank">
+                    <h3>作品タイトル</h3>
+                </a>
+                <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+            </div>
+        </div>
+        <div class="works-scroll">
+            <!--横スクロール作品群-->
         </div>
     </div>
     <div id="social" class="section-main">
