--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
                 </a>
                 <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
             </div>
+            <div class="work-card">
+                <img src="images/icon.png" alt="作品名" class="work-img">
+                <a href="https://youtube.com" target="_blank">
+                    <h3>作品タイトル</h3>
+                </a>
+                <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+            </div>
+            <div class="work-card">
+                <img src="images/icon.png" alt="作品名" class="work-img">
+                <a href="https://youtube.com" target="_blank">
+                    <h3>作品タイトル</h3>
+                </a>
+                <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+            </div>
+            <div class="work-card">
+                <img src="images/icon.png" alt="作品名" class="work-img">
+                <a href="https://youtube.com" target="_blank">
+                    <h3>作品タイトル</h3>
+                </a>
+                <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+            </div>
         </div>
         <div class="works-scroll">
             <!--横スクロール作品群-->
