2026年令和最新版html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <div class="section-title">
             <h2 id="works-txt">Works</h2>
         </div>
+        <div class="phone-title">
+            <h2 id="un-sect">Pick up</h2>
+        </div>
         <div class="works-pickup">
             <!--ピックアップ作品2x2-->
             <div class="work-card">
@@ -87,6 +90,58 @@
         </div>
         <div class="works-scroll">
             <!--横スクロール作品群-->
+            <div class="phone-title">
+                <h2 id="un-sect">Other works...</h2>
+            </div>
+            <div class="works-scroll-wrapper">
+                <div class="works-scroll-container">
+                    <div class="work-card-horizontal">
+                        <img src="images/icon.png" alt="作品名" class="work-img-horizontal">
+                        <div class="work-info-horizontal">
+                            <a href="https://youtube.com" target="_blank">
+                                <h3>作品タイトル1</h3>
+                            </a>
+                            <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+                        </div>
+                    </div>
+                    <div class="work-card-horizontal">
+                        <img src="images/icon.png" alt="作品名" class="work-img-horizontal">
+                        <div class="work-info-horizontal">
+                            <a href="https://youtube.com" target="_blank">
+                                <h3>作品タイトル2</h3>
+                            </a>
+                            <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+                        </div>
+                    </div>
+                    <div class="work-card-horizontal">
+                        <img src="images/icon.png" alt="作品名" class="work-img-horizontal">
+                        <div class="work-info-horizontal">
+                            <a href="https://youtube.com" target="_blank">
+                                <h3>作品タイトル3</h3>
+                            </a>
+                            <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+                        </div>
+                    </div>
+                    <div class="work-card-horizontal">
+                        <img src="images/icon.png" alt="作品名" class="work-img-horizontal">
+                        <div class="work-info-horizontal">
+                            <a href="https://youtube.com" target="_blank">
+                                <h3>作品タイトル4</h3>
+                            </a>
+                            <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+                        </div>
+                    </div>
+                    <div class="work-card-horizontal">
+                        <img src="images/icon.png" alt="作品名" class="work-img-horizontal">
+                        <div class="work-info-horizontal">
+                            <a href="https://youtube.com" target="_blank">
+                                <h3>作品タイトル5</h3>
+                            </a>
+                            <p>作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明作品説明</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="social" class="section-main">
