ヘッダーのスクロール問題を解決。 スクロールエリアの直感的な理解のためのテキストを追加。

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                 <h2 id="un-sect">Other works...</h2>
             </div>
             <div class="works-scroll-wrapper">
+                <div class="scroll-area-label" inert>
+                    <b>←←←Scroll area→→→
+                </div>
                 <div class="works-scroll-container">
                     <div class="work-card-horizontal">
                         <img src="images/icon.png" alt="作品名" class="work-img-horizontal">
