--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="works-scroll-wrapper">
                 <div class="scroll-area-label" inert>
-                    <b>←←←Scroll area→→→
+                    <b>←←←Scroll area→→→</b>
                 </div>
                 <div class="works-scroll-container">
                     <div class="work-card-horizontal">
