scroll area labelのinertを削除

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h2 id="un-sect">Other works...</h2>
             </div>
             <div class="works-scroll-wrapper">
-                <div class="scroll-area-label" inert>
+                <div class="scroll-area-label">
                     <b>←←←Scroll area→→→</b>
                 </div>
                 <div class="works-scroll-container">
