Skillタブの更新

--- a/index.html
+++ b/index.html
@@ -40,13 +40,123 @@
                 <div class="prtext">
                     <p >自己紹介<br>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
                 </div>
-                <p >名前：ここにテキストを入力<br>所在地：ここにテキストを入力<br>お問い合わせ：sample@example.com</p>
+                <p>名前：ここにテキストを入力<br>所在地：ここにテキストを入力<br>お問い合わせ<a href="#social-txt" class="profile-go-social"><b> → Socialにアクセス</a></p>
             </div>
         </div>
     </div>
     <div id="skills" class="section-main">
         <div class="section-title">
             <h2 id="skills-txt">Skills</h2>
+            <div class="skill-main">
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル1" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル2" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル3" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル4" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル5" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル6" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル7" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル8" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icon.png" alt="スキル9" class="skill-img">
+                    <h3>スキル名</h3>
+                    <div class="skill-card-content">
+                        <progress max="100" value="80" class="skill-progress"></progress>
+                        <strong>80%</strong>
+                    </div>
+                    <div class="skill-card-info">
+                        <p>継続年数：5億年</p>
+                        <p>使用用途<br>使用用途使用用途使用用途使用用途使用用途</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!--横スクロールで作りたい-->
