--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="prtext">
                     <p >自己紹介<br>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
                 </div>
-                <p>名前：ここにテキストを入力<br>所在地：ここにテキストを入力<br>お問い合わせ<a href="#social-txt" class="profile-go-social"><b> → Socialにアクセス</a></p>
+                <p>名前：ここにテキストを入力<br>所在地：ここにテキストを入力<br>お問い合わせ<a href="#social-txt" class="profile-go-social"><b> → Socialにアクセス</b></a></p>
             </div>
         </div>
     </div>
@@ -205,7 +205,7 @@
             </div>
             <div class="works-scroll-wrapper">
                 <div class="scroll-area-label">
-                    <b>←←←Scroll area→→→</b>
+                    <b>&lt;&lt;Scroll area&gt;&gt;</b>
                 </div>
                 <div class="works-scroll-container">
                     <div class="work-card-horizontal">
