socialタブを作成した

--- a/index.html
+++ b/index.html
@@ -260,6 +260,35 @@
     <div id="social" class="section-main">
         <div class="section-title">
             <h2 id="social-txt">Social</h2>
+            <div class="social-content">
+                <div class="social-content-block">
+                    <div class="social-container-icon">
+                        <img src="images/icon.png" alt="socialIcon">
+                    </div>
+                    <div class="social-container-info">
+                        <a href="https://x.com/wdon323" target="_blank" class="social-link-text">X(旧Twitter)</a>
+                        <p>説明文章説明文章説明文章説明文章説明文章説明文章説明文章</p>
+                    </div>
+                </div>
+                <div class="social-content-block">
+                    <div class="social-container-icon">
+                        <img src="images/icon.png" alt="socialIcon">
+                    </div>
+                    <div class="social-container-info">
+                        <a href="https://www.youtube.com/@wdon323/" target="_blank" class="social-link-text">Youtube</a>
+                        <p>説明文章説明文章説明文章説明文章説明文章説明文章説明文章</p>
+                    </div>
+                </div>
+                <div class="social-content-block">
+                    <div class="social-container-icon">
+                        <img src="images/icon.png" alt="socialIcon">
+                    </div>
+                    <div class="social-container-info">
+                        <a href="https://soundcloud.com/wdon323" target="_blank" class="social-link-text">Soundcloud</a>
+                        <p>説明文章説明文章説明文章説明文章説明文章説明文章説明文章</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <main>
