--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#skills-txt">Skills</a></li>
                     <li><a href="#works-txt">Works</a></li>
                     <li><a href="#social-txt">Social</a></li>
+                    <!--<li><a href="./debuggin.html">Debug</a></li>-->
                     <!--<li><a href="#contact">お問い合わせ</a></li>-->
                 </ul>
             </nav>
@@ -38,7 +39,7 @@
             <img src="images/icon.png" alt="profileImage" width="250" height="250">
             <div class="profile-txt">
                 <div class="prtext">
-                    <p >自己紹介<br>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                    <p >自己紹介<br>ここにテキストを入力</p>
                 </div>
                 <p>名前：ここにテキストを入力<br>所在地：ここにテキストを入力<br>お問い合わせ<a href="#social-txt" class="profile-go-social"><b> → Socialにアクセス</b></a></p>
             </div>
@@ -263,29 +264,51 @@
             <div class="social-content">
                 <div class="social-content-block">
                     <div class="social-container-icon">
-                        <img src="images/icon.png" alt="socialIcon">
+                        <img src="images/social/logo-black.png" alt="socialIcon">
                     </div>
                     <div class="social-container-info">
-                        <a href="https://x.com/wdon323" target="_blank" class="social-link-text">X(旧Twitter)</a>
-                        <p>説明文章説明文章説明文章説明文章説明文章説明文章説明文章</p>
+                        <a href="https://x.com/LimitedCarrot" target="_blank" class="social-link-text">X(旧Twitter)</a>
+                        <p>可能な範囲での作品の制作進捗などをしています。<br>尚、運用を開始した時期はこのページと同時期です。</p>
                     </div>
                 </div>
                 <div class="social-content-block">
                     <div class="social-container-icon">
-                        <img src="images/icon.png" alt="socialIcon">
+                        <img src="images/social/yt_icon_rgb.png" alt="socialIcon">
                     </div>
                     <div class="social-container-info">
                         <a href="https://www.youtube.com/@wdon323/" target="_blank" class="social-link-text">Youtube</a>
-                        <p>説明文章説明文章説明文章説明文章説明文章説明文章説明文章</p>
+                        <p>映像に収めた作品などを掲載しています。<br>二次創作作品やremixなども含まれます。</p>
                     </div>
                 </div>
                 <div class="social-content-block">
                     <div class="social-container-icon">
-                        <img src="images/icon.png" alt="socialIcon">
+                        <img src="images/social/cloud.png" alt="socialIcon">
                     </div>
                     <div class="social-container-info">
                         <a href="https://soundcloud.com/wdon323" target="_blank" class="social-link-text">Soundcloud</a>
-                        <p>説明文章説明文章説明文章説明文章説明文章説明文章説明文章</p>
+                        <p>音楽作品などを掲載しています。<br>二次創作作品やremixなども含まれます。</p>
+                    </div>
+                </div>
+                <div class="social-content-block">
+                    <div class="social-container-icon">
+                        <svg
+                        width="80"
+                        height="80"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        >
+                        <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M3.00977 5.83789C3.00977 5.28561 3.45748 4.83789 4.00977 4.83789H20C20.5523 4.83789 21 5.28561 21 5.83789V17.1621C21 18.2667 20.1046 19.1621 19 19.1621H5C3.89543 19.1621 3 18.2667 3 17.1621V6.16211C3 6.11449 3.00333 6.06765 3.00977 6.0218V5.83789ZM5 8.06165V17.1621H19V8.06199L14.1215 12.9405C12.9499 14.1121 11.0504 14.1121 9.87885 12.9405L5 8.06165ZM6.57232 6.80554H17.428L12.7073 11.5263C12.3168 11.9168 11.6836 11.9168 11.2931 11.5263L6.57232 6.80554Z"
+                            fill="currentColor"
+                        />
+                        </svg>
+                    </div>
+                    <div class="social-container-info">
+                        <h1 class="click-to-copy" data-copy="sample@example.com">Email(Click to copy)</h1>
+                        <p>上のリンクをクリックするとメールアドレスがコピーされます。</p>
                     </div>
                 </div>
             </div>
@@ -297,6 +320,31 @@
     <footer class="site-footer">
         &copy; 2025 Kajiyama masaharu All rights reserved.
     </footer>
+    <script>
+        // クリックでコピー機能
+        document.querySelectorAll('.click-to-copy').forEach(element => {
+            element.addEventListener('click', () => {
+                // data-copy属性からコピーするテキストを取得
+                const textToCopy = element.getAttribute('data-copy');
+                // クリップボードにコピー
+                navigator.clipboard.writeText(textToCopy).then(() => {
+                    // コピー成功時の処理
+                    const originalText = element.textContent;
+                    element.textContent = 'Email(Copied!)';
+                    element.classList.add('copied');
+                    // 2秒後に元に戻す
+                    setTimeout(() => {
+                        element.textContent = originalText;
+                        element.classList.remove('copied');
+                    }, 1000);
+                }).catch(err => {
+                    // コピー失敗時
+                    console.error('コピーに失敗しました:', err);
+                    alert('コピーに失敗しました');
+                });
+            });
+        });
+    </script>
     <script>
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
         anchor.addEventListener('click', function (e) {
